[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rustc_data_structures = "0.0.1"
rayon = "1.8"

mimalloc = { version = "*", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
